# rust-dioxus-game-of-life

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs
