[package]
name = "my-life-mobile"
version = "0.1.0"
authors = ["Josue <josue.ggh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
gloo-timers = "0.3"
js-sys =  { version = "0.3" }
dioxus-time = "0.1.0-alpha.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.8.5"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
